<resources>
    <string name="app_name">Profitable Trader Consultant</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_in">Send sms</string>
    <string-array name="business_type">
        <item>Agriculture</item>
    </string-array>
    <string name="county">County</string>
    <string-array name="Sub_county">
        <item>Sub County</item>
    </string-array>
    <string-array name="Baringo">
        <item>Baringo Central</item>
        <item>Tiaty</item>
        <item>Eldama Ravine</item>
        <item>Baringo South</item>
        <item>Baringo North</item>
        <item>Mogotio</item>
    </string-array>
    <string-array name="Bomet">
        <item>Sotik</item>
        <item>Bomet Central</item>
        <item>Bomet East</item>
        <item>Chepalungu</item>
        <item>Konoin</item>
    </string-array>
    <string-array name="Bungoma">
        <item>Bumula</item>
        <item>Kanduyi</item>
        <item>Kabuchai</item>
        <item>Kimilili</item>
        <item>Mt Elgon</item>
        <item>Sirisia</item>
        <item>Tongaren</item>
        <item>Webuye East</item>
        <item>Webuye West</item>
    </string-array>
    <string-array name="Busia">
        <item>Bunyala</item>
        <item>Butula</item>
        <item>Matayos</item>
        <item>Nambale</item>
        <item>Samia</item>
        <item>Teso North</item>
        <item>Teso South</item>
    </string-array>
    <string-array name="Elgeyo_Marakwet">
        <item>Keiyo North</item>
        <item>Keiyo South</item>
        <item>Marakwet East</item>
        <item>Marakwet West</item>
    </string-array>
    <string-array name="Embu">
        <item>Embu East</item>
        <item>Embu West</item>
        <item>Embu North</item>
        <item>Mbeere North</item>
        <item>Mbeere South</item>
    </string-array>
    <string-array name="Garissa">
        <item>Fafi</item>
        <item>Garissa Town</item>
        <item>Ijara</item>
        <item>Hulugho</item>
        <item>Lagdera</item>
        <item>Balambala</item>
        <item>Dadaab</item>
    </string-array>
    <string-array name="Homa_Bay">
        <item>Mbita</item>
        <item>Ndhiwa</item>
        <item>Homa Bay Town</item>
        <item>Rangwe</item>
        <item>Karachuonyo</item>
        <item>Kabondo</item>
        <item>Kasipul</item>
        <item>Suba</item>
    </string-array>
    <string-array name="Isiolo">
        <item>Isiolo Town</item>
        <item>Garba Tulla</item>
        <item>Merti</item>
    </string-array>
    <string-array name="Kajiado">
        <item>Kajiado East</item>
        <item>Kajiado Central</item>
        <item>Kajiado North</item>
        <item>Kajiado South</item>
        <item>Kajiado West</item>
    </string-array>
    <string-array name="Kakamega">
        <item>Butere</item>
        <item>Ikolomani</item>
        <item>Khwisero</item>
        <item>Likuyani</item>
        <item>Lugari</item>
        <item>Lurambi</item>
        <item>Malava</item>
        <item>Matungu</item>
        <item>Mumias East</item>
        <item>Mumias West</item>
        <item>Navakholo</item>
        <item>Shinyalu</item>
    </string-array>
    <string-array name="Kericho">
        <item>Ainamoi</item>
        <item>Belgut</item>
        <item>Bureti</item>
        <item>Kipkelion East</item>
        <item>Kipkelion West</item>
        <item>Soin Sigowet</item>
    </string-array>
    <string-array name="Kiambu">
        <item>Githunguri</item>
        <item>Gatundu North</item>
        <item>Gatundu South</item>
        <item>Kiambaa</item>
        <item>Kiambu Town</item>
        <item>Kabete</item>
        <item>Kikuyu</item>
        <item>Lari</item>
        <item>Limuru</item>
        <item>Juja</item>
        <item>Thika Town</item>
        <item>Ruiru</item>
    </string-array>
    <string-array name="Kilifi">
        <item>Kilifi</item>
        <item>Ganze</item>
        <item>Malindi</item>
        <item>Magarini</item>
        <item>Rabai</item>
        <item>Kaloleni</item>
    </string-array>
    <string-array name="Kirinyaga">
        <item>Kirinyaga East</item>
        <item>Kirinyaga Central</item>
        <item>Kirinyaga West</item>
        <item>Mwea East</item>
        <item>Mwea West</item>
    </string-array>
    <string-array name="Kisii">
        <item>Kitutu Chache</item>
        <item>Kitutu Chache North</item>
        <item>Nyaribari Masaba</item>
        <item>Nyaribari Machache</item>
        <item>Bomachoge Borabu</item>
        <item>Bomachoge Machache</item>
        <item>Bobasi</item>
        <item>South Mugirango</item>
        <item>Bonchari</item>
    </string-array>
    <string-array name="Kisumu">
        <item>Kisumu East</item>
        <item>Kisumu Central</item>
        <item>Kisumu West</item>
        <item>Seme</item>
        <item>Muhoroni</item>
        <item>Nyando</item>
        <item>Nyakach</item>
    </string-array>
    <string-array name="Kitui">
        <item>Kitui East</item>
        <item>Kitui Central</item>
        <item>Kitui Rural</item>
        <item>Kitui West</item>
        <item>Mwingi North</item>
        <item>Mwingi Central</item>
        <item>Mwingi West</item>
    </string-array>
    <string-array name="Kwale">
        <item>Matuga</item>
        <item>Msambweni</item>
        <item>Kinango</item>
        <item>Lunga Lunga</item>
    </string-array>
    <string-array name="Laikipia">
        <item>Laikipia East</item>
        <item>Laikipia Central</item>
        <item>Laikipia North</item>
        <item>Laikipia West</item>
        <item>Nyahururu</item>
    </string-array>
    <string-array name="Lamu">
        <item>Lamu East</item>
        <item>Lamu West</item>
    </string-array>
    <string-array name="Machakos">
        <item>Machakos Town</item>
        <item>Mavoko</item>
        <item>Masinga</item>
        <item>Yatta</item>
        <item>Kangundo</item>
        <item>Kathiani</item>
        <item>Matungulu</item>
        <item>Mwala</item>
    </string-array>
    <string-array name="Makueni">
        <item>Makueni</item>
        <item>Mbooni</item>
        <item>Kibwezi East</item>
        <item>Kibwezi West</item>
        <item>Kaiti</item>
        <item>Kilome</item>
    </string-array>
    <string-array name="Mandera">
        <item>Mandera East</item>
        <item>Mandera North</item>
        <item>Mandera South</item>
        <item>Mandera West</item>
        <item>Banisa</item>
        <item>Lafey</item>
    </string-array>
    <string-array name="Meru">
        <item>Buuri</item>
        <item>Igembe Centra;</item>
        <item>Igembe North</item>
        <item>Igembe South</item>
        <item>Imenti Central</item>
        <item>Imenti North</item>
        <item>Imenti South</item>
        <item>Tigani East</item>
        <item>Tigani West</item>
    </string-array>
    <string-array name="Migori">
        <item>Awendo</item>
        <item>Rongo</item>
        <item>Suna East</item>
        <item>Suna West</item>
        <item>Uriri</item>
        <item>Nyatike</item>
        <item>Kuria East</item>
        <item>Kuria West</item>
        <item>Ntimaru</item>
        <item>Mabera</item>
    </string-array>
    <string-array name="Marsabit">
        <item>North Horr</item>
        <item>Moyale</item>
        <item>Saku</item>
        <item>Laisamis</item>
    </string-array>
    <string-array name="Mombasa">
        <item>Mvita</item>
        <item>Jovu</item>
        <item>Changamwe</item>
        <item>Kisauni</item>
        <item>Nyali</item>
        <item>Likoni</item>
    </string-array>
    <string-array name="Muranga">
        <item>Kiharu</item>
        <item>Maragua</item>
        <item>Kigumo</item>
        <item>Kangema</item>
        <item>Kandara</item>
        <item>Gatanga</item>
        <item>Mathioya</item>
    </string-array>
    <string-array name="Nairobi">
        <item>Dagoretti North</item>
        <item>Dagoretti South</item>
        <item>Embakasi Central</item>
        <item>Embakasi East</item>
        <item>Embakasi South</item>
        <item>Embakasi North</item>
        <item>Embakasi West</item>
        <item>Kamukunji</item>
        <item>Kasarani</item>
        <item>Kibra</item>
        <item>Langata</item>
        <item>Makadara</item>
        <item>Mathare</item>
        <item>Roysambu</item>
        <item>Ruaraka</item>
        <item>Starehe</item>
        <item>Westlands</item>
    </string-array>
    <string-array name="Nakuru">
        <item>Nakuru East</item>
        <item>Nakuru North</item>
        <item>Nakuru West</item>
        <item>Subukia</item>
        <item>Naivasha</item>
        <item>Gilgil</item>
        <item>Molo</item>
        <item>Njoro</item>
        <item>Kuresoi North</item>
        <item>Kuresoi South</item>
        <item>Rongai</item>
    </string-array>
    <string-array name="Nandi">
        <item>Mosop</item>
        <item>Emgewen</item>
        <item>Chesumei</item>
        <item>Nandi Hills</item>
        <item>Aldai</item>
        <item>Tinderet</item>
    </string-array>
    <string-array name="Narok">
        <item>Narok East</item>
        <item>Narok North</item>
        <item>Narok South</item>
        <item>Narok West</item>
        <item>Kilgoris</item>
        <item>Emurua Dikirr</item>
    </string-array>
    <string-array name="Nyamira">
        <item>Borabu</item>
        <item>Manga</item>
        <item>Masaba North</item>
        <item>Nyamira North</item>
        <item>Nyamira South</item>
    </string-array>
    <string-array name="Nyandarua">
        <item>Kinangop</item>
        <item>Kipipiri</item>
        <item>OlKalou</item>
        <item>OlJoro Orok</item>
        <item>Ndaragwa</item>
    </string-array>
    <string-array name="Nyeri">
        <item>Kieni East</item>
        <item>Kieni West</item>
        <item>Mathira East</item>
        <item>Mathira West</item>
        <item>Nyeri Central</item>
        <item>Mukurweni</item>
        <item>Tetu</item>
        <item>Othaya</item>
    </string-array>
    <string-array name="Samburu">
        <item>Samburu East</item>
        <item>Samburu North</item>
        <item>Samburur West</item>
    </string-array>
    <string-array name="Siaya">
        <item>Gem</item>
        <item>Ugunja</item>
        <item>Ugenya</item>
        <item>Alego-Usonga</item>
        <item>Bondo</item>
        <item>Rarieda</item>
    </string-array>
    <string-array name="Taita_Taveta">
        <item>Mwatate</item>
        <item>Taveta</item>
        <item>Voi</item>
        <item>Wundanyi</item>
    </string-array>
    <string-array name="Tana_River">
        <item>Bura</item>
        <item>Galole</item>
        <item>Garsen</item>
    </string-array>
    <string-array name="Tharaka_Nithi">
        <item>Tharaka North</item>
        <item>Tharaka South</item>
        <item>Maara</item>
        <item>Chuka</item>
    </string-array>
    <string-array name="Trans_Nzoia">
        <item>Cherengany</item>
        <item>Kaplamai</item>
        <item>Makutano</item>
        <item>Motosiet</item>
        <item>Situnga</item>
        <item>Sinyereri</item>
        <item>Suwerwa</item>
    </string-array>
    <string name="logo">Logo</string>
    <string name="input_verification_code">Input verification code</string>
    <string name="verification_code">Verification code</string>
    <string name="submit">Submit</string>
    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="product_input">Product input</string>
    <string name="business_name">Business name</string>
    <string name="save">Save</string>
    <string name="edit_your_business_information">Edit your business information</string>
    <string name="back_button">Back button</string>
</resources>