<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".Ui.Login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_above="@id/input">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"/>

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:paddingBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="141dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:importantForAutofill="yes"
            android:inputType="phone"
            android:padding="15dp"
            android:textColor="@color/Purple_Dark"
            android:textColorHint="@color/Purple_Light"
            android:autofillHints="" />

        <Button
            android:id="@+id/sign_In"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/Purple_Dark"
            android:textSize="17sp" />

    </LinearLayout>
</RelativeLayout>