<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".Login.verification">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/logo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_verification_code"
            android:textSize="20sp"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/Black"
            android:layout_marginBottom="25dp"
            android:paddingBottom="20dp"/>

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:digits="0123456789"

            android:gravity="center"
            android:hint="@string/verification_code"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="15dp"
            android:textColorHint="@color/Black" />

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="17sp" />


    </LinearLayout>
<!--
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:layout_below="@id/input_area"
        android:layout_marginTop="60dp"/>
-->
</RelativeLayout>